@@ -168,6 +168,7 @@ since 1999.  If I missed your name, let me know.
 * Gerhard Lausser
 * William Leibzon
 * Pedro Leite
+* lev
 * Bernard Li
 * Anders K. Lindgren
 * Joerg Linge
